# NativeDeconSandboxLGPL

./: CMakeLists.txt  README.md
DeconwareSwig/: CMakeLists.txt  DeconwareSwig.i  DeconwareSwigJAVA_wrap.c
DeconwareSwig/javasrc/: DeconwareSwig.java  DeconwareSwigJNI.java
YacuDecuWrapper/: CMakeLists.txt  YacuDecuWrapper.i  YacuDecuWrapperJAVA_wrap.c
YacuDecuWrapper/javasrc/: YacuDecu_swig.java  YacuDecu_swigJNI.java
deconware-GPU/: CMakeLists.txt  dot.cu
